# olol

./: MANIFEST.in  Persistance.md  README.md  olol-node.sh  olol-proxy-debug.sh  olol-proxy.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: client_demo.py
src/olol/: ollama_service.py  proxy.py  service.py
src/olol/async/: client.py
src/olol/proxy/: __init__.py  app.py  console_ui.py  health.py  utils.py
src/olol/proxy/api/: __init__.py  models.py  routes.py  services.py  swagger.py
src/olol/proxy/cluster/: health.py  manager.py
src/olol/proxy/web/static/css/: style.css
src/olol/proxy/web/static/js/: main.js
src/olol/proxy/web/templates/: base.html  dashboard.html  health.html  models.html  playground.html  servers.html  settings.html  swagger.html
src/olol/sync/: client.py
src/olol/utils/: cluster.py
src/osync/: __init__.py  __main__.py  ollama_pb2.py  ollama_service.py  proxy.py  service.py
src/osync/async/: __init__.py
src/osync/proto/: __init__.py  ollama.proto  ollama_pb2.py
src/osync/proxy/: __init__.py  __main__.py  app.py  console_ui.py  health.py  stats.py  utils.py
src/osync/proxy/api/: __init__.py  routes.py  services.py  swagger.py
src/osync/proxy/cluster/: discovery.py  health.py  manager.py  registry.py
src/osync/proxy/db/: database.py  sync_manager.py
src/osync/proxy/queue/: queue.py  scheduler.py
src/osync/proxy/web/static/css/: style.css
src/osync/proxy/web/static/js/: main.js
src/osync/proxy/web/static/js/i18n/: en.js  fr.js  i18n.js
src/osync/proxy/web/static/js/i18n/common/: en.json  fr.json
src/osync/proxy/web/static/js/i18n/dashboard/: en.json  fr.json
src/osync/proxy/web/static/js/i18n/models/: fr.json
src/osync/proxy/web/static/js/i18n/servers/: en.json  fr.json
src/osync/proxy/web/templates/: base.html  dashboard.html  health.html  log.html  models.html  playground.html  queue.html  servers.html  settings.html  swagger.html  terminal.html
src/osync/rpc/: client.py  server.py
src/osync/sync/: __init__.py  client.py
src/osync/utils/: __init__.py  cluster.py  discovery.py  protoc.py
src/script/: oprotob.py
tests/: conftest.py  test_oprotob.py
tools/: build-simple.sh  build-wheel.py  protoc-build.sh
