[project]
name = "osync"
version = "0.1.0"
description = "Ollama gRPC interface with sync/async support for distributed clustering"
readme = "README.md"
authors = [
    { name = "WhiteMordred", email = "WhiteMordred@dev2real.com" }
]
maintainers = [
    { name = "WhiteMo", email = "WhiteMordred@dev2real.com" }
]

license = { text = "MIT" }
requires-python = ">=3.0"
keywords = ["ollama", "llm", "grpc", "protobuf", "async", "asyncio", "cluster", "distributed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent"
]
dependencies = [
    "grpcio>=1.62.1",
    "grpcio-tools>=1.62.1",
    "protobuf>=4.25.3",
    "grpclib>=0.4.7",
    "flask>=2.0.0",
    "aiohttp>=3.8.0",
    "numpy>=2.2.3",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "tinydb>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/WhiteMordred/osync"
Documentation = "https://osync.readthedocs.io/"
Repository = "https://github.com/WhiteMordred/osync.git"
BugTracker = "https://github.com/WhiteMordred/osync/issues"

[project.scripts]
osync = "osync.__main__:main"
osync-protoc = "osync.utils.protoc:build"
osync-proxy = "osync.__main__:run_proxy_entrypoint"
osync-server = "osync.__main__:run_server_entrypoint"
osync-rpc = "osync.__main__:run_rpc_server_entrypoint"
osync-dist = "osync.__main__:run_dist_entrypoint"
osync-client = "osync.__main__:run_client_entrypoint"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osync"]
include = [
    "src/osync/**/*.py",
    "src/osync/proto/*.proto",
]
only-packages = false

[tool.hatch.build.targets.wheel.force-include]
"src/osync/proto/ollama.proto" = "osync/proto/ollama.proto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -ra --cov=osync"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0"
]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "ruff>=0.0.280",
    "pre-commit>=3.3.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.18.0"
]
proxy = [
    "flask>=2.0.0"
]
async = [
    "aiohttp>=3.8.0"
]
